--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,7 @@
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+
+body {
+    background-color: #ECF0F1;
+}
