--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,53 @@
+.siteContainer {
+	width: 90%;
+	max-width: 940px;
+	margin: 0 auto;
+	position: relative;
+}
+button#collapseButton {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 10;
+	cursor: pointer;
+}
+.pwmodal-bg {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 999;
+	background-color: rgba(255,255,255,0.8);
+}
+.pwmodal-container {
+	font-size: 36px;
+	font-weight: 300;
+	font-style: italic;
+	color: #555;
+}
+.events {
+	padding: 10px !important;
+	line-height: 1.5em;
+}
 .timelineContainer {
 	margin-top: 20px;
 	margin-bottom: 200px;
+}
+.timeline {
+	border-top: 1px solid #999;
 }
 
 .text-right {
@@ -35,8 +82,8 @@
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
-.myImage {
-	height: 10px;
+#patientIDSpan {
+	top: 28px !important; 
 }
 
 .help-tip{
