--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,10 @@ button#collapseButton {
 	margin-top:31px;
 }
 
+#ex1Slider .slider-selection {
+	background: #BABABA;
+}
+
 body {
     background-color: #f1f2f6;
 }
