--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ button#collapseButton {
 	background-color: rgba(255,255,255,0.8);
 }
 .pwmodal-container {
+	margin-left: 100px;
+	margin-right: 100px;
 	font-size: 36px;
 	font-weight: 300;
 	font-style: italic;
@@ -156,6 +158,11 @@ button#collapseButton {
 
 #searchButton {
 	margin-top:10px;
+}
+
+.slider.slider-horizontal {
+  margin-top: 5px;
+  margin-left: 5px;
 }
 
 body {
