--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,11 @@ button#collapseButton {
   margin-left: 5px;
 }
 
+.downloadButton {
+    margin-top: 5px;
+    text-align: center;
+}
+
 body {
     background-color: #f1f2f6;
 }
