--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 	margin: 0 auto;
 	position: relative;
 }
+
 button#collapseButton {
 	position: absolute;
 	top: 0;
@@ -11,6 +12,7 @@ button#collapseButton {
 	z-index: 10;
 	cursor: pointer;
 }
+
 .pwmodal-bg {
 	display: -webkit-box;
 	display: -webkit-flex;
@@ -32,6 +34,7 @@ button#collapseButton {
 	z-index: 999;
 	background-color: rgba(255,255,255,0.8);
 }
+
 .pwmodal-container {
 	margin-left: 100px;
 	margin-right: 100px;
@@ -40,14 +43,17 @@ button#collapseButton {
 	font-style: italic;
 	color: #555;
 }
+
 .events {
 	padding: 10px !important;
 	line-height: 1.5em;
 }
+
 .timelineContainer {
 	margin-top: 20px;
 	margin-bottom: 200px;
 }
+
 .timeline {
 	border-top: 1px solid #999;
 }
@@ -58,30 +64,30 @@ button#collapseButton {
 }
 
 .input-sm {
-    height: 35px;
-    padding: 5px 10px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
+	height: 35px;
+	padding: 5px 10px;
+	font-size: 12px;
+	line-height: 1.5;
+	border-radius: 3px;
 }
 
 .form-control {
-    display: block;
-    width: 100%;
-    height: 35px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	display: block;
+	width: 100%;
+	height: 35px;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 #patientIDSpan {
@@ -162,15 +168,15 @@ button#searchButton {
 }
 
 .slider.slider-horizontal {
-  margin-top: 5px;
-  margin-left: 5px;
+	margin-top: 5px;
+	margin-left: 5px;
 }
 
-.downloadButton {
-    margin-top: 5px;
+button.downloadButton {
+	margin-top: 5px;
 	margin-right: 5px;
-    text-align: center;
-}
+	text-align: center;
+	}
 
 .events-object.img-rounded {
 	margin-left: 10px !important;
@@ -178,22 +184,25 @@ button#searchButton {
 }
 
 @media screen and (max-width: 500px) {
-   .timeline{
+	.timeline{
 	margin-left: 30px;
 	}
+
 	.events-object.img-rounded {
 		max-width: 200px;
 		max-height: 200px;
 	}
+
 	.events-body{
 		clear: both;
 	}
-	.downloadButton{
+
+	button.downloadButton{
 		margin-bottom: 5px;
 	}
 }
 
 body {
-    background-color: #f1f2f6;
+	background-color: #f1f2f6;
 	width: 100%;
 }
