--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,19 @@ button#searchButton {
 	margin-right: 10px !important;
 }
 
+.questionnaire {
+    margin-top: 15px;
+}
+
+button#feedback-button {
+	top: 5px; 
+	left: 85%;
+
+	position: absolute; 
+}
+
+
+
 @media screen and (max-width: 340px){
 	.timeline{
 	margin-left: 30px;
