--- a/css/main.css
+++ b/css/main.css
@@ -1,202 +1,206 @@
 .siteContainer {
-	width: 90%;
-	max-width: 940px;
-	margin: 0 auto;
-	position: relative;
+    width: 90%;
+    max-width: 940px;
+    margin: 0 auto;
+    position: relative;
 }
 
 button#collapseButton {
-	position: absolute;
-	top: 0;
-	right: 0;
-	z-index: 10;
-	cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    cursor: pointer;
 }
 
 .pwmodal-bg {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 999;
-	background-color: rgba(255,255,255,0.8);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .pwmodal-container {
-	margin-left: 100px;
-	margin-right: 100px;
-	font-size: 36px;
-	font-weight: 300;
-	font-style: italic;
-	color: #555;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #555;
 }
 
 .events {
-	padding: 15px !important;
-	line-height: 1.5em;
+    padding: 15px !important;
+    line-height: 1.5em;
 }
 
 .timelineContainer {
-	margin-top: 20px;
-	margin-bottom: 200px;
+    margin-top: 20px;
+    margin-bottom: 200px;
 }
 
 .timeline {
-	border-top: 1px solid #999;
+    border-top: 1px solid #999;
 }
 
 .text-right {
-	position: relative;
-	margin-right: 200px;
+    position: relative;
+    margin-right: 200px;
 }
 
 .input-sm {
-	height: 35px;
-	padding: 5px 10px;
-	font-size: 12px;
-	line-height: 1.5;
-	border-radius: 3px;
+    height: 35px;
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
 }
 
 .form-control {
-	display: block;
-	width: 100%;
-	height: 35px;
-	padding: 6px 12px;
-	font-size: 14px;
-	line-height: 1.42857143;
-	color: #555;
-	background-color: #fff;
-	background-image: none;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    display: block;
+    width: 100%;
+    height: 35px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background: #fff none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
 #patientIDSpan {
-	top: 28px !important; 
+    top: 28px !important;
 }
 
 .help-tip {
-	position: absolute;
-	top: 18px;
-	right: 18px;
-	text-align: center;
-	background-color: #BCDBEA;
-	border-radius: 50%;
-	width: 24px;
-	height: 24px;
-	font-size: 14px;
-	line-height: 26px;
-	cursor: default;
-	opacity: 0.5;
+    position: absolute;
+    top: 18px;
+    right: 18px;
+    text-align: center;
+    background-color: #BCDBEA;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    font-size: 14px;
+    line-height: 26px;
+    cursor: default;
+    opacity: 0.5;
 }
 
 .help-tip:before {
-	content:'?';
-	font-weight: bold;
-	color:#fff;
+    content: '?';
+    font-weight: bold;
+    color: #fff;
 }
 
 .help-tip:hover p {
-	display:block;
-	transform-origin: 100% 0%;
+    display: block;
+    transform-origin: 100% 0;
 
-	-webkit-animation: fadeIn 0.3s ease-in-out;
-	animation: fadeIn 0.3s ease-in-out;
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
 
 }
 
-.help-tip p {	/* The tooltip */
-	display: none;
-	text-align: left;
-	background-color: #1E2021;
-	padding: 20px;
-	width: 300px;
-	position: absolute;
-	border-radius: 3px;
-	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-	right: -4px;
-	color: #FFF;
-	font-size: 13px;
-	line-height: 1.4;
+.help-tip p { /* The tooltip */
+    display: none;
+    text-align: left;
+    background-color: #1E2021;
+    padding: 20px;
+    width: 300px;
+    position: absolute;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    right: -4px;
+    color: #FFF;
+    font-size: 13px;
+    line-height: 1.4;
 }
 
 .help-tip p:before { /* The pointer of the tooltip */
-	position: absolute;
-	content: '';
-	width:0;
-	height: 0;
-	border:6px solid transparent;
-	border-bottom-color:#1E2021;
-	right:10px;
-	top:-12px;
+    position: absolute;
+    content: '';
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-bottom-color: #1E2021;
+    right: 10px;
+    top: -12px;
 }
 
 .help-tip p:after { /* Prevents the tooltip from being hidden */
-	width:100%;
-	height:40px;
-	content:'';
-	position: absolute;
-	top:-40px;
-	left:0;
+    width: 100%;
+    height: 40px;
+    content: '';
+    position: absolute;
+    top: -40px;
+    left: 0;
 }
 
 .thumbSizeSel {
-	margin-top:20px;
+    margin-top: 20px;
+}
+
+.entryThumbPDFContainer {
+    margin: 0 10px 0 0;
 }
 
 .thumbIcon {
-	margin-bottom:5px;
+    margin-bottom: 5px;
+    text-align: center;
 }
 
 .pageCount {
-	text-align: center;
+    text-align: center;
 }
 
 .textSnippet {
-	width:90%;
+    width: 90%;
 }
 
 button#searchButton {
-	margin-top:10px;
+    margin-top: 10px;
 }
 
 .slider.slider-horizontal {
-	margin-top: 5px;
-	margin-left: 5px;
+    margin-top: 5px;
+    margin-left: 5px;
 }
 
 .downloadButton {
-	margin-top: 5px;
-	margin-right: 5px;
-	text-align: center;
+    margin-top: 5px;
+    margin-right: 5px;
+    text-align: center;
 }
 
 .events-object.img-rounded {
-	margin-left: 10px !important;
-	margin-right: 10px !important;
+    margin-left: 10px !important;
+    margin-right: 10px !important;
 }
 
 #homeRef {
-	position: absolute;
+    position: absolute;
 }
 
 .questionnaire {
@@ -204,136 +208,136 @@ button#searchButton {
 }
 
 button#feedback-button {
-	top: 5px; 
-	left: 80%;
-	position: absolute; 
+    top: 5px;
+    left: 80%;
+    position: absolute;
 }
 
 button#send-feedback-button {
-	margin-top: 5px;
-	margin-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #feedback-dialog {
-	top: 5px;
-	padding: 25px 25px 25px 25px;
-	width: auto;
-	max-width: 500px;
-	transform: translate(10%, 0%);
+    top: 5px;
+    padding: 25px 25px 25px 25px;
+    width: auto;
+    max-width: 500px;
+    transform: translate(10%, 0%);
 }
 
 #feedback-response {
-	align-self: auto;
+    align-self: auto;
 }
 
 .btn.btn-link.btn-lg.jqmClose {
-	float: right;
+    float: right;
 }
 
 /*Adjusted bootflat timeline css*/
 .timeline dl dt {
-	margin: 0 10% 30px;
+    margin: 0 10% 30px;
 }
 
 .timeline dl:before {
-	left: 10%;
+    left: 10%;
 }
 
 .timeline dl dd .circ {
-	left: 10%;
+    left: 10%;
 }
 
 .timeline dl dd.pos-right .time {
-	padding: 10px 0;
-	margin-left: -60px;
-	left: 10%;
-	text-align: left;
+    padding: 10px 0;
+    margin-left: -60px;
+    left: 10%;
+    text-align: left;
 }
+
 .timeline dl dd.pos-right .events {
-	float: right;
-	width: 84%;
+    float: right;
+    width: 84%;
 }
 
 #kibanaGraph {
-	display: table;
-	margin: 0 auto;
+    display: table;
+    margin: 0 auto;
 }
 
+@media screen and (max-width: 340px) {
+    .timeline {
+        margin-left: 30px;
+    }
 
-@media screen and (max-width: 340px){
-	.timeline{
-	margin-left: 30px;
-	}
+    .events-object.img-rounded {
+        max-width: 200px;
+        max-height: 200px;
+    }
 
-	.events-object.img-rounded {
-		max-width: 200px;
-		max-height: 200px;
-	}
+    .events-body {
+        clear: both;
+    }
 
-	.events-body{
-		clear: both;
-	}
+    button.downloadButton {
+        margin-bottom: 5px;
+    }
 
-	button.downloadButton{
-		margin-bottom: 5px;
-	}
-
-	button#feedback-button {
-		left: auto;
-		right: 5%;
-	}
+    button#feedback-button {
+        left: auto;
+        right: 5%;
+    }
 }
 
-@media screen and (max-width: 450px) and (min-width: 341px){
-	.timeline{
-	margin-left: 30px;
-	}
+@media screen and (max-width: 450px) and (min-width: 341px) {
+    .timeline {
+        margin-left: 30px;
+    }
 
-	.events-object.img-rounded {
-		max-width: 250px;
-		max-height: 250px;
-	}
+    .events-object.img-rounded {
+        max-width: 250px;
+        max-height: 250px;
+    }
 
-	.events-body{
-		clear: both;
-	}
+    .events-body {
+        clear: both;
+    }
 
-	button.downloadButton{
-		margin-bottom: 5px;
-	}
+    button.downloadButton {
+        margin-bottom: 5px;
+    }
 
-	button#feedback-button {
-		left: auto;
-		right: 5%;
-	}
+    button#feedback-button {
+        left: auto;
+        right: 5%;
+    }
 }
 
 @media screen and (max-width: 700px) and (min-width: 451px) {
-	.timeline{
-		margin-left: 30px;
-	}
+    .timeline {
+        margin-left: 30px;
+    }
 
-	.events-object.img-rounded {
-		max-width: 400px;
-		max-height: 400px;
-	}
+    .events-object.img-rounded {
+        max-width: 400px;
+        max-height: 400px;
+    }
 
-	.events-body {
-		clear: both;
-	}
+    .events-body {
+        clear: both;
+    }
 
-	.downloadButton {
-		margin-top: 15px;
-		margin-bottom: 5px;
-	}
+    .downloadButton {
+        margin-top: 15px;
+        margin-bottom: 5px;
+    }
 
-	button#feedback-button {
-		left: auto;
-		right: 5%;
-	}
+    button#feedback-button {
+        left: auto;
+        right: 5%;
+    }
 }
 
 body {
-	background-color: #f1f2f6;
-	width: 100%;
+    background-color: #f1f2f6;
+    width: 100%;
 }
