--- a/css/main.css
+++ b/css/main.css
@@ -341,3 +341,9 @@ body {
     background-color: #f1f2f6;
     width: 100%;
 }
+
+.timeline dl dd .events .events-body .events-heading {
+    font-weight: bold;
+    text-align: center;
+    font-size: 16px;
+}
